--- a/main.html
+++ b/main.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+
+	<nav>
+        <ul>
+            <li><a href="https://example.com/home">Home</a></li>
+            <li><a href="https://example.com/about">About</a></li>
+            <li><a href="https://example.com/contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <hr />
+
+    <section>
+        <h2>3 random audios</h2>
+
+        <audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+        </audio>
+
+        <br /><br />
+
+        <audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+        </audio>
+
+        <br /><br />
+
+        <audio controls>
+            <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+        </audio>
+    </section>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
